k8s/04-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toeggelomat-frontend
  namespace: toeggelomat
  labels:
    k8s-app: toeggelomat-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: toeggelomat-frontend
  template:
    metadata:
      labels:
        k8s-app: toeggelomat-frontend
    spec:
      containers:
        - name: toeggelomat-frontend
          image: spoud/toeggelomat-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 100Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: toeggelomat-frontend-service
  namespace: toeggelomat
  labels:
    k8s-app: toeggelomat-frontend
spec:
  selector:
    k8s-app: toeggelomat-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
